--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
       "**/*"
     ],
     "ios": {
+      "googleServicesFile":"./GoogleService-Info.plist",
       "supportsTablet": true
     },
     "android": {
@@ -25,6 +26,18 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins":[
+      "@react-native-firebase/app",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ]
+    ]
   }
-}
+} 
+
