--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/firestore-compat": "^0.3.14",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-firebase/database": "^18.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "csvtojson": "^2.0.10",
     "expo": "^49.0.4",
     "expo-build-properties": "~0.8.3",
     "expo-firebase-app": "^2.0.0",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^8.6.8",
+    "firebase": "^10.1.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
